--- a/nginx.example
+++ b/nginx.example
@@ -61,7 +61,9 @@ server {
     ssl_prefer_server_ciphers on;
     ssl_session_cache shared:SSL:10m;
     ssl_session_tickets off; # Requires nginx >= 1.5.9
-    #add_header Strict-Transport-Security "max-age=63072000; includeSubDomains";
+    add_header Strict-Transport-Security "max-age=31536000; includeSubdomains" always;
+    add_header X-Xss-Protection "1; mode=block" always;
+    add_header Content-Security-Policy "default-src: 'self'; script-src 'self' 'unsafe-inline' https://yandex.st" always;
     # https://developer.mozilla.org/en-US/docs/Web/HTTP/X-Frame-Options
     add_header X-Frame-Options DENY;
     add_header X-Content-Type-Options nosniff;
